# cpp_gtest_coverage_demo

./: .gitignore  CMakeLists.txt  README  all.sh  analyze_clang_tidy.sh  build.sh  coverage.sh  run_tests.sh
IDE/: gtestDemo.slnx  gtestDemo.vcxproj  gtestDemo.vcxproj.filters
src/: externalAPIs.h  externalComponents.h  myHandler.c  myHandler.h
tests/: test_BasicCalculations.cpp  test_myHandler.cpp
